# Rusuh

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.example.yaml  docker-compose.yml
.claude/plans/: prd.json
adder/src/: lib.rs
concurency/: Cargo.toml
concurency/src/: main.rs
data_types/: Cargo.toml
data_types/src/: main.rs
docs/: kiro_event_stream.md  kiro_implementation_progress.md
docs/plans/: 2026-03-01-antigravity-full-parity.md
enums/src/: main.rs
error/src/: main.rs
frontend/: .oxfmt.json  .oxlintrc.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: bun-test.d.ts  index.css  main.tsx  routes.tsx
frontend/src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  collapsible.tsx  dialog.tsx  input.tsx  select.tsx  separator.tsx  sonner.tsx  tabs.tsx  textarea.tsx
frontend/src/lib/: api.ts  management-api.ts  management-auth-files.ts  management-auth.tsx  management-codex.test.ts  management-codex.ts  management-copilot.ts  management-error.ts  management-kiro.ts  management-oauth.ts  management-zed.test.ts  management-zed.ts  oauth-feedback.test.ts  oauth-feedback.ts  query-client.ts  query.ts  theme.ts  toast.ts
frontend/src/ui/: dashboard-layout.tsx  page-shell.tsx  query-state.tsx  root-route.tsx  status-tone.ts  ui-tokens.ts
functions/src/: main.rs
generics/src/: main.rs
guessing_game/src/: main.rs
hash_maps/src/: main.rs
hello-async/src/: main.rs
lifetimes/src/: main.rs
minigrep/src/: lib.rs
multithread_web_server/: Cargo.toml
multithread_web_server/src/: lib.rs  main.rs
ownership/src/: main.rs
rectangles/src/: main.rs
src/: error.rs  lib.rs  main.rs
src/auth/: antigravity.rs  antigravity_login.rs  cli.rs  codex.rs  codex_device.rs  codex_login.rs  codex_runtime.rs  github_copilot.rs  github_copilot_login.rs  github_copilot_runtime.rs  kiro.rs  kiro_login.rs  kiro_record.rs  kiro_runtime.rs  kiro_social.rs  kiro_sso.rs  manager.rs  mod.rs  store.rs  zed.rs  zed_callback.rs  zed_login.rs  zed_session.rs
src/config/: mod.rs
src/dashboard_api/: mod.rs
src/middleware/: auth.rs  mod.rs
src/models/: mod.rs
src/providers/: antigravity.rs  codex.rs  github_copilot.rs  kiro.rs  kiro_outcome.rs  kiro_stream.rs  kiro_translator.rs  mod.rs  model_info.rs  model_registry.rs  registry.rs  static_models.rs  zed.rs  zed_anthropic.rs  zed_request.rs  zed_response.rs
src/proxy/: balancer.rs  execution_session.rs  handlers.rs  kiro_oauth.rs  management.rs  mod.rs  oauth.rs  stream.rs  zed_import.rs
src/router/: mod.rs
strings/src/: main.rs
structs/src/: main.rs
tests/: antigravity.rs  auth_files.rs  auth_status.rs  balancer.rs  codex_auth.rs  codex_device.rs  codex_jwt.rs  codex_management.rs  codex_module_layout.rs  codex_provider.rs  codex_quota.rs  codex_routing.rs  config.rs  dashboard_api.rs  error.rs  github_copilot_auth.rs  github_copilot_management.rs  github_copilot_provider.rs  github_copilot_routing.rs  http.rs  kiro_cooldown.rs  kiro_management.rs  kiro_provider.rs  kiro_provider_registration.rs  kiro_quota.rs  kiro_record.rs  kiro_stream.rs  kiro_translator.rs  kiro_usage_checker.rs  model_registry.rs  oauth.rs  stream.rs  zed_anthropic.rs  zed_auth.rs  zed_client.rs  zed_import.rs  zed_login.rs  zed_management.rs  zed_provider.rs  zed_registration.rs  (+3 more)
traits/src/: main.rs
variables/src/: main.rs
vectors/src/: main.rs
(+7 files in other folders)
