[package]
name = "rusuh"
version = "0.1.3"
edition = "2021"
description = "Rust reimplementation of CLIProxyAPI — wraps Antigravity, Kiro as OpenAI/Claude/Gemini compatible API"

[[bin]]
name = "rusuh"
path = "src/main.rs"

[lib]
name = "rusuh"
path = "src/lib.rs"

[dependencies]
# HTTP server
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "fs"] }
hyper = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "stream", "rustls", "form"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Async streaming
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

# Config & env
config = "0.15"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
url = "2"
once_cell = "1"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
regex = "1"
async-trait = "0.1"
dirs = "6.0.0"
open = "5.3.3"
serde_urlencoded = "0.7.1"
rand = { version = "0.10.0", features = ["std_rng"] }
sha2 = "0.10"
rsa = { version = "0.9.10", features = ["pem"] }
urlencoding = "2.1"
moka = { version = "0.12", features = ["sync"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.26.0"
